--- a/assets/main.css
+++ b/assets/main.css
@@ -7,7 +7,7 @@
 body,
 html {
     height: 100%;
-    margin: 0px;
+    margin: 0;
     background-color: #F0F0F6;
 }
 
@@ -20,7 +20,7 @@ html {
     flex-wrap: wrap;
     justify-content: stretch;
     margin: 48px 16px 32px;
-    padding: 0px 0px 0px;
+    padding: 0 0 0;
 }
 
 [class='bubble'] {
