--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,18 @@
+:root {
+    --background-color: rgb(238, 238, 240);
+    --background-color-bubble: rgb(255, 255, 255);
+    --text-color: rgb(67, 67, 67);
+    /* Default color in light mode */
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --text-color: rgb(255, 255, 255); /* Text color in dark mode */
+        --background-color: rgb(28, 28, 28); /* Background color in dark mode */
+        --background-color-bubble: rgb(44, 44, 46) ;
+    }
+}
+
 @media (max-width: 600px) {
     .flex-container {
         flex-direction: column;
@@ -8,7 +23,7 @@ body,
 html {
     height: 100%;
     margin: 0;
-    background-color: #F0F0F6;
+    background-color: var(--background-color);
 }
 
 * {
@@ -31,22 +46,16 @@ html {
     padding: 20px 20px 20px;
     border-radius: 28px;
     text-align: left;
-}
-
-.bubble-color {
-    background-color: #ffffff;
+    background-color: var(--background-color-bubble);
 }
 
 .text-font {
     font-family: "Comfortaa", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
+    color: var(--text-color);
     /*<uniquifier>: Use a unique and descriptive class name*/
     /*<weight>: Use a value from 300 to 700*/
-}
-
-.text-color {
-    color: rgb(67, 67, 67);
 }
 
 .text-heading {
