--- a/assets/main.css
+++ b/assets/main.css
@@ -2,14 +2,14 @@
     --background-color: rgb(238, 238, 240);
     --background-color-bubble: rgb(255, 255, 255);
     --text-color: rgb(67, 67, 67);
-    /* Default color in light mode */
+    --border-radius: 28px;;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         --text-color: rgb(255, 255, 255); /* Text color in dark mode */
         --background-color: rgb(28, 28, 28); /* Background color in dark mode */
-        --background-color-bubble: rgb(44, 44, 46) ;
+        --background-color-bubble: rgb(44, 44, 46);
     }
 }
 
@@ -40,11 +40,26 @@ html {
 
 .bubble-container {
     flex: auto;
+    display: inline-block;
+    overflow: hidden;
     min-width: 240px;
     max-width: 1200px;
     margin: 8px 8px;
     padding: 20px 20px 20px;
-    border-radius: 28px;
+    border-radius: var(--border-radius);
+    text-align: left;
+    background-color: var(--background-color-bubble);
+}
+
+.reminder-item {
+    flex: auto;
+    display: inline-block;
+    overflow: hidden;
+    min-width: 240px;
+    max-width: 1200px;
+    margin: 8px 8px;
+    padding: 8px 24px;
+    border-radius: var(--border-radius);
     text-align: left;
     background-color: var(--background-color-bubble);
 }
@@ -54,16 +69,16 @@ html {
     font-optical-sizing: auto;
     font-style: normal;
     color: var(--text-color);
-    /*<uniquifier>: Use a unique and descriptive class name*/
-    /*<weight>: Use a value from 300 to 700*/
 }
 
 .text-heading {
     font-size: 16px;
     font-weight: 500;
+    /*<weight>: Use a value from 300 to 700*/
 }
 
 .text-list {
     font-size: 14px;
     font-weight: 400;
+    /*<weight>: Use a value from 300 to 700*/
 }
