--- a/assets/main.css
+++ b/assets/main.css
@@ -47,8 +47,9 @@ html {
     margin: 8px 8px;
     padding: 20px 20px 20px;
     border-radius: var(--border-radius);
-    text-align: left;
     background-color: var(--background-color-bubble);
+
+    text-align: left;
 }
 
 .reminder-item {
@@ -58,10 +59,17 @@ html {
     min-width: 240px;
     max-width: 1200px;
     margin: 8px 8px;
-    padding: 8px 24px;
+    padding: 8px 16px;
     border-radius: var(--border-radius);
-    text-align: left;
     background-color: var(--background-color-bubble);
+    text-align: left;
+    vertical-align: baseline;
+}
+
+input[type="checkbox"] {
+    margin-right: 4px;
+    position: relative;
+    bottom: 0.1em;
 }
 
 .text-font {
@@ -69,6 +77,7 @@ html {
     font-optical-sizing: auto;
     font-style: normal;
     color: var(--text-color);
+    line-height: 1.6;
 }
 
 .text-heading {
