--- a/assets/main.css
+++ b/assets/main.css
@@ -1,13 +1,18 @@
 :root {
+    --min-width: 240px;
+    --max-width: 100vw;
+    --border-radius: 28px;
     --background-color: rgb(238, 238, 240);
     --background-color-bubble: rgb(255, 255, 255);
     --text-color: rgb(67, 67, 67);
-    --min-width: 240px;
-    --max-width: 100vw;
+    --base-font-size: 16px;
     --text-align: left;
     --vertical-align: baseline;
-    --border-radius: 28px;
-    --base-font-size: 16px;
+    --z-index-base: 1;
+    --z-index-toolbar: 100;
+    --z-index-menu: 1000;
+    --z-index-sheet: 2000;
+    --z-index-alert: 3000;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -27,6 +32,8 @@
 body,
 html {
     height: 100%;
+    display: flex;
+    justify-content: center;
     background-color: var(--background-color);
 }
 
@@ -46,31 +53,41 @@ input[type="checkbox"] {
 
 .flex-container {
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
+    max-width: 1200px;
     margin: 48px 16px 32px;
     padding: 0 0 32px;
     text-align: left;
     vertical-align: baseline;
 }
 
+.toolbar {
+    flex: auto;
+    flex-direction: row;
+    width: 100%;
+    overflow: hidden;
+    margin: 8px 8px;
+    padding: 20px 20px 20px;
+    border-radius: var(--border-radius);
+    background-color: var(--background-color-bubble);
+    position: fixed;
+    z-index: var(--z-index-toolbar);
+}
+
 .list-group {
     flex: auto;
     flex-direction: column;
-    overflow: hidden;
-    word-wrap: break-word;
     min-width: 300px;
     margin: 8px 8px;
     padding: 20px 20px 20px;
     border-radius: var(--border-radius);
     background-color: var(--background-color-bubble);
-    text-align: var(--text-align);
-    vertical-align: var(--vertical-align);
 }
 
 .list-element {
     flex: auto;
     flex-direction: row;
-    display: flex;
     align-items: flex-start;
     overflow: hidden;
     text-overflow: ellipsis;
