Added toolbar buttons and first popup code.

--- a/assets/main.css
+++ b/assets/main.css
@@ -27,10 +27,6 @@ html {
     background-color: var(--background-color);
 }
 
-button {
-    margin-bottom: 1em;
-}
-
 input[type="checkbox"] {
     margin-right: calc(0.4em + var(--base-font-size) * 0.1);
     position: relative;
@@ -57,10 +53,8 @@ input[type="checkbox"] {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-
     height: 86vh;
     overflow: auto;
-    border-radius: var(--border-radius);
 }
 
 .flex-container-elements {
@@ -72,15 +66,15 @@ input[type="checkbox"] {
 }
 
 .toolbar {
-    flex: auto;
+    display: flex;
     flex-direction: row;
     align-items: flex-start;
     overflow: hidden;
+    width: 100%;
     margin: 8px 8px;
     padding: 20px 20px 20px;
     border-radius: var(--border-radius);
     background-color: var(--background-color-bubble);
-
 }
 
 .list-group {
@@ -108,12 +102,28 @@ input[type="checkbox"] {
     vertical-align: var(--vertical-align);
 }
 
+.spacer-fill {
+    flex-grow: 1;
+}
+
+.spacer-gap {
+    min-width: 2em;
+}
+
+.spacer-elements {
+    min-width: 0.8em;
+}
+
+.button-margin-bottom {
+    margin-bottom: 0.8em;
+}
+
 .element-text {
     display: inline-block;
     overflow: hidden;
     text-overflow: ellipsis;
     word-wrap: break-word;
-    max-width: 200px;
+    max-width: 600px;
 }
 
 .text-font {
@@ -140,3 +150,60 @@ input[type="checkbox"] {
     font-weight: 300;
     /*<weight>: Use a value from 300 to 700*/
 }
+
+
+/* Popup container - can be anything you want */
+.popup {
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: #555 transparent transparent transparent;
+}
+
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 0.2s ease;
+    animation: fadeIn 0.2s ease;
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
+}
+
