--- a/assets/main.css
+++ b/assets/main.css
@@ -166,29 +166,27 @@ input[type="checkbox"] {
 /* The actual popup */
 .popup .popuptext {
     visibility: hidden;
-    width: 160px;
-    background-color: #555;
+    width: 100px;
+    background-color: var(--background-color);
     color: #fff;
     text-align: center;
-    border-radius: 6px;
+    border-radius: 16px;
     padding: 8px 0;
     position: absolute;
     z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
+    bottom: auto;
+    left: auto;
+    right: 120%;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 0;
 }
 
-/* Popup arrow */
-.popup .popuptext::after {
-    content: "";
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    margin-left: -5px;
-    border-width: 5px;
-    border-style: solid;
-    border-color: #555 transparent transparent transparent;
+/* Toggle this class - hide and show the popup */
+.popup .show {
+    visibility: visible;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
 }
 
 .popup .show {
