--- a/assets/main.css
+++ b/assets/main.css
@@ -24,7 +24,6 @@ body,
 html {
     display: flex;
     justify-content: center;
-    /*height: 99vh;*/
     background-color: var(--background-color);
 }
 
@@ -79,7 +78,7 @@ input[type="checkbox"] {
 }
 
 .list-group {
-    flex: auto;
+    flex: 1;
     flex-direction: column;
     min-width: 240px;
     margin: 8px 8px;
@@ -89,7 +88,7 @@ input[type="checkbox"] {
 }
 
 .list-element {
-    flex: auto;
+    flex: 1;
     flex-direction: row;
     align-items: flex-start;
     overflow: hidden;
