--- a/assets/main.css
+++ b/assets/main.css
@@ -71,6 +71,8 @@ input[type="checkbox"] {
     align-items: flex-start;
     overflow: hidden;
     width: 100%;
+    min-width: 240px;
+    max-height: 18px;
     margin: 8px 8px;
     padding: 20px 20px 20px;
     border-radius: var(--border-radius);
