Adjustements to layout.

--- a/assets/main.css
+++ b/assets/main.css
@@ -37,7 +37,7 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    max-width: 1200px;
+    width: 96vw;
     margin: 8px 16px;
 }
 
@@ -52,8 +52,8 @@ input[type="checkbox"] {
 .flex-container-scroll {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
     height: 86vh;
+    width: 96vw;
     overflow: auto;
 }
 
