Saved layout before adjustement.

--- a/assets/main.css
+++ b/assets/main.css
@@ -38,6 +38,7 @@ input[type="checkbox"] {
     flex-direction: row;
     flex-wrap: wrap;
     width: 96vw;
+    max-width: 1200px;
     margin: 8px 16px;
 }
 
@@ -54,6 +55,7 @@ input[type="checkbox"] {
     flex-wrap: wrap;
     height: 86vh;
     width: 96vw;
+    max-width: 1200px;
     overflow: auto;
 }
 
@@ -80,7 +82,6 @@ input[type="checkbox"] {
 }
 
 .list-group {
-    flex: 1;
     flex-direction: column;
     min-width: 240px;
     margin: 8px 8px;
