--- a/assets/main.css
+++ b/assets/main.css
@@ -2,6 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
     --background-color: rgb(238, 238, 240);
     --background-color-bubble: rgb(255, 255, 255);
+    --important-color: rgb(255, 179, 64);
     --text-color: rgb(67, 67, 67);
     --base-font-size: 16px;
     --border-radius: 28px;
@@ -14,9 +15,10 @@
 
 @media (prefers-color-scheme: dark) {
     :root {
-        --text-color: rgb(255, 255, 255);
         --background-color: rgb(28, 28, 28);
         --background-color-bubble: rgb(48, 48, 48);
+        --important-color: rgb(201, 52, 0);
+        --text-color: rgb(255, 255, 255);
     }
 }
 
