--- a/source/public/styles/main.css
+++ b/source/public/styles/main.css
@@ -305,15 +305,15 @@ button[data-action="toggle-important"].important {
     outline: 2px solid var(--important-color);
 }
 
+.selected-reminder {
+    border: 2px solid var(--selection-color);
+}
+
 .editable-label {
     color: var(--text-color);
     cursor: text;
     padding: 2px 4px;
     border: 1px dashed transparent;
-}
-
-.selected-list-group {
-    outline: 2px solid var(--selection-color);
 }
 
 button#sort-by-date.active .toolbar-button-text {
@@ -335,3 +335,5 @@ button.inactive {
     cursor: not-allowed;
     pointer-events: none;
 }
+
+
